==> xzw168/grblsmt/grbl/stepper.c <==
#include "grbl.h"
#include "stm32f10x_rcc.h"
#include "misc.h"
#define DT_SEGMENT (1.0f/(ACCELERATION_TICKS_PER_SECOND*60.0f)) // 分钟/段
#define REQ_MM_INCREMENT_SCALAR 1.25f
#define RAMP_ACCEL 0
#define RAMP_CRUISE 1
#define RAMP_DECEL 2
#define RAMP_DECEL_OVERRIDE 3
#define PREP_FLAG_RECALCULATE bit(0)
#define PREP_FLAG_HOLD_PARTIAL_BLOCK bit(1)
#define PREP_FLAG_PARKING bit(2)
#define PREP_FLAG_DECEL_OVERRIDE bit(3)
	#define MAX_AMASS_LEVEL 3
	#define AMASS_LEVEL1 (F_CPU/8000) // 超载驱动ISR（x2）。定义为F_CPU /（以Hz为单位的截止频率）
	#define AMASS_LEVEL2 (F_CPU/4000) // Over-drives ISR (x4)
	#define AMASS_LEVEL3 (F_CPU/2000) // Over-drives ISR (x8)

void st_wake_up()
{
  // 启用步进驱动程序。
  if (bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)) 
  { 
	  SetStepperDisableBit();
  }
  else 
  { 
	  ResetStepperDisableBit(); 
  }

  // 初始化步进输出位，以确保第一个ISR调用不会执行。
  st.step_outbits = step_port_invert_mask;

  // 从设置初始化步进脉冲计时。这里确保重写后更新。
  #ifdef STEP_PULSE_DELAY
    // 设置方向引脚后设置总步进脉冲时间。示波器的特殊计算。
    st.step_pulse_time = -(((settings.pulse_microseconds+STEP_PULSE_DELAY-2)*TICKS_PER_MICROSECOND) >> 3);
    // 设置方向引脚写入和步进命令之间的延迟。
    OCR0A = -(((settings.pulse_microseconds)*TICKS_PER_MICROSECOND) >> 3);
  #else // 正常运行
    // 设置步脉冲时间 示波器的特殊计算。使用二补。

#if defined(STM32F103C8)
  st.step_pulse_time = (settings.pulse_microseconds)*TICKS_PER_MICROSECOND;
#endif
  #endif

  // 启用步进驱动器中断

#if defined (STM32F103C8)
  TIM3->ARR = st.step_pulse_time - 1;
  TIM3->EGR = TIM_PSCReloadMode_Immediate;
  TIM_ClearITPendingBit(TIM3, TIM_IT_Update);

  TIM2->ARR = st.exec_segment->cycles_per_tick - 1;
  /* 设置自动重载值 */
#ifndef ADAPTIVE_MULTI_AXIS_STEP_SMOOTHING        
  TIM2->PSC = st.exec_segment->prescaler;
#endif
  TIM2->EGR = TIM_PSCReloadMode_Immediate;
  NVIC_EnableIRQ(TIM2_IRQn);
#endif
}

void st_go_idle()
{
  // 禁用步进驱动器中断。如果激活，允许步进器端口复位中断完成。

#ifdef STM32F103C8
  NVIC_DisableIRQ(TIM2_IRQn);
#endif

  busy = false;

  // 根据设置和情况设置步进驱动器空闲状态，禁用或启用。
  bool pin_state = false; // 保持启用状态
  if (((settings.stepper_idle_lock_time != 0xff) || sys_rt_exec_alarm || sys.state == STATE_SLEEP) && sys.state != STATE_HOMING) {
    // 强制步进器暂停锁定轴一定的时间，以确保轴完整
    // 在最后一次移动结束时停止并且不会从剩余惯性力漂移。
    delay_ms(settings.stepper_idle_lock_time);
    pin_state = true; // 覆盖 禁用步进器。
  }
  if (bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)) { pin_state = !pin_state; } //应用引脚反转
  if (pin_state) 
  { 
	  SetStepperDisableBit();
  }
  else 
  { 
	  ResetStepperDisableBit();
  }
}

void st_generate_step_dir_invert_masks()
{
  uint8_t idx;
  step_port_invert_mask = 0;
  dir_port_invert_mask = 0;
  for (idx=0; idx<N_AXIS; idx++) {
    if (bit_istrue(settings.step_invert_mask,bit(idx))) { step_port_invert_mask |= step_pin_mask[idx]; }
    if (bit_istrue(settings.dir_invert_mask,bit(idx))) { dir_port_invert_mask |= direction_pin_mask[idx]; }
  }
}

void stepper_init()
{
  // 配置步进和方向接口引脚
#ifdef STM32F103C8
	GPIO_InitTypeDef GPIO_InitStructure;
	RCC_APB2PeriphClockCmd(RCC_STEPPERS_DISABLE_PORT, ENABLE);
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure.GPIO_Pin = STEPPERS_DISABLE_MASK;
	GPIO_Init(STEPPERS_DISABLE_PORT, &GPIO_InitStructure);

	RCC_APB2PeriphClockCmd(RCC_STEP_PORT, ENABLE);
	GPIO_InitStructure.GPIO_Pin = STEP_MASK;
	GPIO_Init(STEP_PORT, &GPIO_InitStructure);

	RCC_APB2PeriphClockCmd(RCC_DIRECTION_PORT, ENABLE);
	GPIO_InitStructure.GPIO_Pin = DIRECTION_MASK;
	GPIO_Init(DIRECTION_PORT, &GPIO_InitStructure);

	RCC->APB1ENR |= RCC_APB1Periph_TIM2;
	TIM_Configuration(TIM2, 1, 1, 1);
	RCC->APB1ENR |= RCC_APB1Periph_TIM3;
	TIM_Configuration(TIM3, 1, 1, 1);
	NVIC_DisableIRQ(TIM3_IRQn);
	NVIC_DisableIRQ(TIM2_IRQn);
#endif

}
